Added another secret

--- a/argocd-vault-plugin/secrets.yaml
+++ b/argocd-vault-plugin/secrets.yaml
@@ -7,3 +7,15 @@ metadata:
 type: Opaque
 stringData:
   TOKEN: <password>
+---
+apiVersion: v1
+kind: Secret
+metadata:
+  name: vault-secret
+  annotations:
+    avp.kubernetes.io/path: "creds/data/app"
+type: Opaque
+stringData:
+  username: <username>
+  password: <password>
+  apikey: <apikey>
